# CodeDigest-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
src/codedigest/: __init__.py  __main__.py  cli.py  config.py  formatter.py  git_handler.py  scanner.py  tokenizer.py  tree.py
tests/: test_formatter.py  test_scanner.py  test_tokenizer.py
